--- a/views/profile.html
+++ b/views/profile.html
@@ -7,7 +7,7 @@
 @License: maDezynIzM.E. 2016
 -->
 
-<div class="flex_container profile_view" id="profile_page">
+<div class="flex_container profile_view page" id="profile_page">
     <div class="flex_col_container col">
         <div class="flex_container padding_long card">
             <img src="imgs/app/avt.svg" alt="#" id="profile_img" class="circle"/>
@@ -56,7 +56,7 @@
         </div>
         <br>
         <div class="flex_container padding_16 card" id="stats">
-            <div class="flex_col_container flex_1" id="actions">
+            <div class="flex_col_container flex_1" class="account_actions">
                 <button type="button" name="edit">Edit profile</button>
                 <button type="button" name="settings">Settings</button>
                 <button type="button" name="sign_out_btn" id="sign_out_btn">Sign-out</button>
