--- a/views/profile.html
+++ b/views/profile.html
@@ -22,7 +22,7 @@
         <br>
         <div class="flex_container card profile_gallery" id="conn_img_gallery">
             <!-- some shit -->
-            <img src="imgs/app/avt.svg">
+            <img src="imgs/app/avt.svg">2
             <img src="imgs/app/avt.svg">
             <img src="imgs/app/avt.svg">
             <img src="imgs/app/avt.svg">
