--- a/views/home.html
+++ b/views/home.html
@@ -13,10 +13,10 @@
                 <img src="imgs/app/avt.svg" alt="#" id="profile_img" />
             </div>
             <div class="flex_container card_actions margin_4">
-                <button class="theme_link btn profile_like" name="like">
+                <button class="theme btn profile_like" name="like">
                     <i class="material-icons">favorite_outline</i>
                 </button>
-                <button class="theme_link btn profile_info">
+                <button class="theme btn profile_info">
                     <i class="material-icons">info</i>
                 </button>
             </div>
@@ -24,7 +24,7 @@
     </div>
 </div>
 <!-- PROFILE VIEWING MODAL -->
-<div class="modal">
+<div class="modal page">
     <!-- MODAL'S CONTENT CONTAINER -->
     <div class="flex_col_container modal_content">
         <button class="theme modal_close">
