--- a/views/userAccess.html
+++ b/views/userAccess.html
@@ -14,11 +14,11 @@
             <input type="password" name="password" id="password" placeholder="PASSWORD" maxlength="10" required>
 
             <br>
-            <input type="submit" name="submit_login" id="submit_login" value="Sign me in" class="btn">
+            <input type="submit" name="login" id="submit_login" value="Sign me in" class="btn">
 
             <br>
             <div class="flex_container actions">
-                <a id="sign_up_btn" class="theme_link" href="#/registration">Not a member?</a>
+                <a id="toggle_reg" class="theme_link">Not a member?</a>
                 <a class="theme_link">forgot password?</a>
             </div>
         </form>
@@ -53,11 +53,11 @@
                    placeholder="Re-enter password" maxlength="10" required>
 
             <br>
-            <input type="submit" name="submit_reg" id="submit_reg" value="Sign me up">
+            <input type="submit" name="register" id="submit_reg" value="Sign me up">
 
             <br>
             <div class="flex_container actions">
-                <a id="sign_in_btn" class="theme_link" href="#/login">Already a member</a>
+                <a id="toggle_log" class="theme_link">Already a member</a>
             </div>
         </form>
     </div>
