--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ body {font-size: 14px;}
 .center {margin: auto;}
 .circle {border-radius: 50%;}
 .half_width {width: 50%;}
-.full_width, header, #main_content, footer, .modal {width: 100%;}
+.full_width, header, .views_container, footer, .modal {width: 100%;}
+.full_size {width: 100%; height: 100%; max-height: 100%;}
 .flex_1 {flex: 1;}
 .flex_2 {flex: 2;}
 .flex_3 {flex: 3;}
@@ -36,23 +37,29 @@ body {font-size: 14px;}
     -webkit-flex-wrap: wrap;
 }
 .flex_col_container {flex-direction: column;}
-.page {margin-top: 128px;}
-
 /**!! BASIC WEB-APP LAYOUT
 	> HEADER AND NAVIGATION BAR !!**/
 header {
-	position: fixed;
-	top: 0;
-	height: 64px;
+	height: 7%;
+	/*max-height: 64px;*/
 	background-color: rgb(66, 0, 0);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
+header form {width: 30%;}
+header form input {text-align: left;margin: 0;}
+header form button {margin-left: 0;}
+header form input + button {display: none;}
+header form input:focus {width: 80%; background: white; color: black;}
+header form input:focus + button {display: block;}
 nav {align-self: flex-end;margin-right: 0;flex-wrap: nowrap;-webkit-flex-wrap: nowrap;}
 .branding, nav {width: auto; height: 100%; max-height: 100%;}
 .branding {align-self: flex-start; margin-left: 2%;}
 .branding .brand_logo_sm {height: 95%; width: auto;}
 /**!! MAIN VIEW CONTAINER !!**/
-.views_container {height: 90%;}
+.views_container {height: 86%;}
+.page {height: 100%; max-height: 100%;}
+/**!! FOOTER !!**/
+footer {height: 7%; background: black; color: white;}
 /**!! BASIC BUTTONS !!**/
 button, footer, .logo_text, .btn, input {color: white;}
 button, h1, h2, h3, p, .btn, a, input {text-align: center;}
@@ -62,17 +69,17 @@ button, h1, h2, h3, p, .btn, a, input {text-align: center;}
 	outline: none;
 	border: none;
 	box-sizing: border-box;
-	transition: all 0.5s;
+	transition: all 0.3s;
 	padding: 12px 28px;
 }
 button, .btn, .btn_round {color: #992030;text-transform: uppercase;font-weight: bold;}
-.btn:hover, button:hover, a:hover {cursor: pointer;}
+.branding:hover, .btn:hover, button:hover, a:hover {cursor: pointer;}
 .btn i, button i {font-size: 24px;width: 24px;height: 24px;}
 /** THEME CLASSES **/
 .theme {color: #992030;background: white;border: 2px solid transparent;}
 .theme_inverse {color: white;background: #992030;border: 2px solid transparent;}
 .theme_link {color: white;background: none;border-bottom: 2px solid transparent;}
-.theme:hover {border-color: #992030;}
+.theme:hover {background: #992030; color: white;}
 .theme_inverse:hover {color: #992030;background: none;}
 .theme_link:hover {color: #992030;background: white;}
 /** BASIC FORMS **/
@@ -81,7 +88,7 @@ form .actions {width: 60%;}
 form .actions a {font-size: small;width: 50%;}
 input {width: 60%;margin: 8px auto;padding: 12px 20px;border-bottom: 2px solid transparent;}
 input:required:invalid {border-color: #992030;width: 57%;}
-input:required:focus {border: 1px dotted white;width: 60%;}
+input:required:focus {border: 1px dashed white;width: 60%;}
 input:required:valid {border-color: forestgreen;width: 60%;}
 input[type=submit] {color: white;border: 2px solid #992030;background-color: rgba(153, 32, 48, 0.4);}
 input[type=submit]:hover {background-color: rgba(153, 32, 48, 1);}
@@ -96,7 +103,7 @@ form[name=register] {display: none;}
 	border-radius: 4px;
 }
 /**!! MAIN CONTAINER !!**/
-#browser_page {height: 100%;max-height: 100%;width: 100%;overflow-y: auto;}
+/*#browser_page {height: 100%;max-height: 100%;width: 100%;}*/
 /**!! MATERIAL-DESIGN-LIKE CARDS !!**/
 .card, .modal {font-family: 'Cinzel Decorative';font-size: 14px;}
 .card {
@@ -109,7 +116,7 @@ form[name=register] {display: none;}
 }
 .card img {width: 160px; height: 160px;}
 .card p {margin: 8px auto;}
-.mini_profiles_view {width: 90%;overflow: scroll;max-height: 80%;}
+.mini_profiles_view {width: 90%;overflow: auto;max-height: 80%;}
 .mini_profiles_view .card {margin: 8px;}
 .mini_profiles_view .card:hover {
 	box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
@@ -131,15 +138,19 @@ form[name=register] {display: none;}
 .modal_content .modal_close:hover {background-color: #992030;color: white;}
 /*.modal_content .card p span {font-style: normal;}*/
 /**!! SIGNED-IN USER PROFILE !!**/
-.profile_view {background: white;color: black;width: 60%;min-height: 95%;padding: 16px;}
+.profile_view {background: white;color: black;width: 80%;min-height: 95%;padding: 16px;}
 .profile_view .card {width: 100%;height: auto;}
 .profile_view .col {width: 40%;}
-.profile_view label {width: 30%;}
-.profile_view input {border: none;width: 65%;text-wrap: normal;}
+.profile_view form {color: black;}
+.profile_view label {width: 30%;font-weight: bold;}
+.profile_view input {
+	width: 60%;color: black; border-bottom: 1px solid #992030;text-align: left;}
+.profile_view input:disabled {border: none;text-wrap: normal;}
 /*.profile_view form {color: black;}*/
-.profile_view fieldset {border: none;}
+.profile_view fieldset {border: none; width: 80%}
 .profile_gallery img {max-width: 100px;max-height: 100px;margin: 4px;flex: 1;}
 .profile_view .profile_gallery {padding: 18px;}
+.profile_view .edit_actions {display: none;transition: all 0.6s;}
 /**!! LOADER !!**/
 #app_loader_cont {
 	position: fixed;
